-fix editor overflow-x style;

--- a/src/less/editor.less
+++ b/src/less/editor.less
@@ -18,6 +18,7 @@
     line-height: 1.7;
     resize: none;
     outline: none;
+    overflow-x: hidden;
     overflow-y: auto;
     border: none;
     font-family: "PingFang SC", Helvetica, Arial, sans-serif;
